feat: implemented landing page with grid and table layout for devices

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -4,9 +4,11 @@
 
 @layer base {
   :root {
-    --color-primary: #3b82f6;
+    --color-primary: #6d28d9;
     --color-primary-light-4: #e6f4ff;
     --color-danger: #f56c6c;
+
+    --color-secondary: #f5f3ff;
 
     --text-color: #334155;
     --background-color: #f1f5f9;
@@ -18,10 +20,11 @@
   }
 
   :root[class~='dark'] {
-    --color-primary: #3b82f6;
+    --color-primary: #6d28d9;
     --color-primary-light-4: #e6f4ff;
     --color-danger: #f56c6c;
-
+    
+  --color-secondary: #f5f3ff;
     --text-color: #334155;
     --background-color: #f1f5f9;
 
